fixed transitions and hover states on mobile menu

--- a/src/Layout/Menu/Menu.scss
+++ b/src/Layout/Menu/Menu.scss
@@ -1,4 +1,4 @@
-@import '../../Layout/variables.scss';
+@import "../../Layout/variables.scss";
 
 .menu-wrapper {
   width: 100%;
@@ -15,6 +15,7 @@
     z-index: -1;
     background-color: $primary-color;
     height: 100vh;
+    transition: 0.4s ease width;
   }
   .menu-links {
     font-family: $primary-fonts;
@@ -27,6 +28,7 @@
     width: 100%;
     height: 100%;
     visibility: hidden;
+    opacity: 0;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -34,16 +36,34 @@
     ul {
       z-index: 3;
       li {
+        text-align: center;
         list-style: none;
         color: #fff;
         font-size: 4rem;
-        padding: 1rem;
-        a {
-          color: inherit;
-          text-decoration: none;
-          transition: color 0.4s ease;
+        // padding: 1rem;
+        padding: 1rem 0 0 1rem;
+
+        .nav-link,
+        .curr {
+          &:after {
+            content: "";
+            position: absolute;
+            height: 8px;
+            background-color: #fff;
+            width: 0;
+            left: 50%;
+            bottom: 0;
+            transform: translateX(-50%);
+            transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) width;
+          }
+        }
+        .nav-link {
+          position: relative;
+          color: #fff;
           &:hover {
-            color: $primary-dark-color;
+            &:after {
+              width: 100%;
+            }
           }
         }
       }
@@ -60,18 +80,21 @@
     height: 50px;
     opacity: 0;
     &:checked {
-      transition: all 0.4s ease;
-      width: 100%;
+      // width: 100%;
       & ~ .menu-overlay {
+        transition: 0.4s ease width;
         width: 100%;
       }
       & ~ .menu-links {
+        transition: opacity 0.4s ease 0.3s;
+        opacity: 1;
         visibility: visible;
       }
       & + .menu-hamburger {
         & > div {
           &:before,
           &:after {
+            transition: transform 0.4s ease, background-color 0.2s ease 0.2s;
             background: #fff;
             top: 0;
             transform: rotate(225deg);
@@ -108,11 +131,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: all 0.4s ease;
+      // transition: 0.4s ease;
       &:before,
       &:after {
-        transition: all 0.4s ease;
-        content: '';
+        transition: 0.4s ease transform;
+        content: "";
         position: absolute;
         z-index: 1;
         width: 100%;
@@ -122,10 +145,6 @@
       &:after {
         transform: rotate(90deg);
       }
-
-      // &:after {
-      //   top: 10px;
-      // }
     }
   }
 }
@@ -142,17 +161,38 @@
       display: none;
     }
     .menu-links {
+      opacity: 1;
       visibility: visible;
       position: absolute;
       justify-content: flex-end;
       ul {
         display: flex;
-        li a {
-          color: #000;
-          font-weight: 700;
-          font-size: 0.7rem;
-          text-transform: uppercase;
-          letter-spacing: 2px;
+        li {
+          padding-left: 1.4rem;
+          text-align: right;
+          .nav-link {
+            padding: 0.4rem 0.8rem;
+            color: #000;
+            font-weight: 700;
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            border-radius: 0.2rem;
+            transition: 0.5s ease-in-out background-color;
+            &:hover {
+              background: $primary-lightest-color;
+            }
+          }
+          .curr {
+            color: white;
+            background: $primary-color;
+          }
+          .nav-link,
+          .curr {
+            &:after {
+              background: transparent;
+            }
+          }
         }
       }
     }
